--- a/app/src/components/FormCovid/FormCovid.css
+++ b/app/src/components/FormCovid/FormCovid.css
@@ -5,8 +5,61 @@
     display: inline-block;
     margin: 10px auto;
 }
-
 .bottomPart{
-  
     font-size:20px;
+}
+
+.maskImg{
+    width: 100px;
+}
+.radioBtn{
+    margin-top:20px;
+    margin-right: 5px;
+}
+.textBox{
+    text-align:left;
+}
+.textBox2{
+    text-align:center;
+    margin:0 auto;
+    color:red;
+}
+
+.radioBtnText{
+    margin-right: 10px;
+}
+
+
+
+
+
+
+.group{
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+}
+.group input{
+    width: 70%;
+    border:none;
+    border-bottom:1px solid #000000;
+    padding-left: 20px;
+
+
+
+}
+.group label{
+    
+}
+.formTop{
+    padding: 20px;
+    background: #ffffff;
+}
+.separate{
+    width: 50%;
+    text-align: left;
+}
+.headerForm{
+    background-color:#146ba3;
+    padding: 20px;
 }
