--- a/app/src/components/Common/Header.css
+++ b/app/src/components/Common/Header.css
@@ -2,8 +2,20 @@ header{
     position:relative;
     background:#146ba3;
     padding-bottom: 20px;
+    padding-top: 20px;
+    font-family: 'Roboto', sans-serif;
 }
 header p{
     color:#ffffff;
     font-size:20px;
+    font-weight: 700;
+    margin-top: 20px;
+}
+
+@media (max-width : 758px){
+    header img{
+        width: 80%;
+        margin: 0 auto;
+        display: block;
+    }
 }
