--- a/app/src/components/Login/Login.css
+++ b/app/src/components/Login/Login.css
@@ -1,17 +1,66 @@
 .loginPage {
-    padding: 60px 0;
-    background-color:#c3c3c3;
+    position: relative;
     width: 100%;
     height:100vh;
+    background: url('./../../assets/img/loginPage.jpg') no-repeat center fixed; 
+    background-size: cover;
+    font-family: 'Roboto', sans-serif;
+  }
+  .loginPageBlack{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.7);
   }
 
   .loginPage form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color:#ffffff;
-    padding:30px;
+    padding: 40px 20px;
     text-align:left;
     width: 600px;
-    margin:50px auto;
+    box-sizing: border-box;
+    background: #000;
+    color: #fff;
   }
   .loginPage form input{
-    margin:0 auto;
+    width: 100%;
+    border: none;
+    outline: none;
+    height: 40px;
   }
+  .loginPage form label{
+    font-size: 25px;
+    font-weight: 700;
+ 
+  }
+  .loginPage form button{
+    width: 100%;
+    border: none;
+    outline: none;
+    height: 40px;
+    background-image: linear-gradient(to right,#F26FC9, #8772EF);
+    color: #ffff;
+  }
+  .loginPage form button:hover, .loginPage form button:focus{
+    cursor: pointer;
+    box-shadow: 1px 1px 10px #696969;
+  }
+
+  .errorLogin{
+    text-align: center;
+    margin-top:20px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+  }
+
+
+  @media (max-width : 992px){
+    .loginPage form{
+      width: 300px;
+    }
+}
